<resources>
    <string name="app_name">Meteo</string>
    <string name="connect">Se connecter</string>
    <string name="passWordAsk">Combinaison login/mot de passe incorrecte.</string>
    <string name="title_activity_main">Météo Grenoble</string>
    <string name="connected_as">connecté en tant que</string>
    <string name="evening">soirée</string>
    <string name="afternoon">après-midi</string>
    <string name="morning">matin</string>
    <string name="addCity">Ajouter une ville</string>
    <string name="settings">Paramètres</string>
    <string name="notify_switch">Notifier</string>
    <string name="channel_name">defaut</string>
    <string name="channel_description">Démo météo</string>
    <string name="weather">Météo</string>
    <string name="connection_impossible">Connexion impossible</string>
    <string name="error">Erreur</string>
    <string name="missing_location_permission">Vous devez ajouter les permissions de localisation</string>
    <string name="local_weather">Météo locale</string>
    <string name="search_city">Ajouter une ville</string>
    <string name="add_this_city">Ajouter la ville</string>
    <string name="type_city_name">Veuillez entrer le nom de la ville à ajouter</string>
    <string name="city_hint">Chicago, US</string>
    <string name="city">Ville</string>
    <string name="locate_me">Localiser</string>
    <string name="json_error">Les données météos sont corrompues</string>
</resources>
