<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/slide_menu"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity">

    <item
        android:id="@+id/add_city"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_city"
        app:showAsAction="always"/>

    <item
        android:id="@+id/local_weather"
        android:icon="@drawable/ic_location_black_24dp"
        android:title="@string/local_weather"
        app:showAsAction="always"/>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />
    <item
        android:id="@+id/notify_switch"
        android:title="@string/notify_switch"
        app:actionLayout="@layout/menu_switch"
        app:showAsAction="always"/>
</menu>
