<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="Test"
            android:textAppearance="?attr/textAppearanceListItem" />


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight=".33">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/text_margin"
                    android:gravity="center"
                    android:text="@string/morning"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/morning_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_none_24dp" />

                    <TextView
                        android:id="@+id/morning_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0 °C"
                        android:textAppearance="?attr/textAppearanceListItem" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:id="@+id/divider2"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="?android:attr/listDivider" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight=".33">

                <TextView
                    android:id="@+id/afternoon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/text_margin"
                    android:gravity="center"
                    android:text="@string/afternoon"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/afternoon_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_none_24dp" />

                    <TextView
                        android:id="@+id/afternoon_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0 °C"
                        android:textAppearance="?attr/textAppearanceListItem" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:id="@+id/divider3"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="?android:attr/listDivider" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight=".33">

                <TextView
                    android:id="@+id/evening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/text_margin"
                    android:gravity="center"
                    android:text="@string/evening"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/evening_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_none_24dp" />

                    <TextView
                        android:id="@+id/evening_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0 °C"
                        android:textAppearance="?attr/textAppearanceListItem" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
